--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-
+    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
+    <meta property="og:image" content="%PUBLIC_URL%/portfolio.png" />
+    <meta property="og:title" content="Personal Homepage" />
+    <meta
+      property="og:description"
+      content="Personal Homepage created using create-react-app"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Personal homepage" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
